src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) int cuda_DeviceInfo_memoryBusWidth_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_l2CacheSize_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_maxThreadsPerMultiProcessor_0(void* self);
extern "C" __declspec(dllexport) void cuda_DeviceInfo_queryMemory_0(void* self, size_t totalMemory, size_t freeMemory);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_freeMemory_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_totalMemory_0(void* self);
extern "C" __declspec(dllexport) bool cuda_DeviceInfo_isCompatible_0(void* self);
extern "C" __declspec(dllexport) void cuda_Event_Delete(void* self);
extern "C" __declspec(dllexport) void cuda_Event_record_0(void* self, void* stream);
extern "C" __declspec(dllexport) bool cuda_Event_queryIfComplete_0(void* self);
extern "C" __declspec(dllexport) void cuda_Event_waitForCompletion_0(void* self);
extern "C" __declspec(dllexport) float cuda_Event_elapsedTime_0(void* start, void* end);
extern "C" __declspec(dllexport) void cuda_GpuData_Delete(void* self);
extern "C" __declspec(dllexport) void cuda_GpuMat_Delete(void* self);
extern "C" __declspec(dllexport) void* cuda_GpuMat_defaultAllocator_0();
extern "C" __declspec(dllexport) void cuda_GpuMat_setDefaultAllocator_0(void* allocator);
extern "C" __declspec(dllexport) void* cuda_GpuMat_getStdAllocator_0();
extern "C" __declspec(dllexport) void* cuda_GpuMat_New_0(int rows, int cols, int type, void* allocator);
extern "C" __declspec(dllexport) void* cuda_GpuMat_New_1(cv::Size size, int type, void* allocator);
extern "C" __declspec(dllexport) void* cuda_GpuMat_New_2(int rows, int cols, int type, cv::Scalar s, void* allocator);
extern "C" __declspec(dllexport) void* cuda_GpuMat_New_3(cv::Size size, int type, cv::Scalar s, void* allocator);
extern "C" __declspec(dllexport) void* cuda_GpuMat_New_4(void* m);
extern "C" __declspec(dllexport) void* cuda_GpuMat_New_5(void* m, cv::Range rowRange, cv::Range colRange);
extern "C" __declspec(dllexport) void* cuda_GpuMat_New_6(void* m, cv::Rect roi);
extern "C" __declspec(dllexport) void* cuda_GpuMat_New_7(void* arr, void* allocator);
extern "C" __declspec(dllexport) void cuda_GpuMat_create_0(void* self, int rows, int cols, int type);
extern "C" __declspec(dllexport) void cuda_GpuMat_create_1(void* self, cv::Size size, int type);
extern "C" __declspec(dllexport) void cuda_GpuMat_release_0(void* self);
extern "C" __declspec(dllexport) void cuda_GpuMat_swap_0(void* self, void* mat);
extern "C" __declspec(dllexport) void cuda_GpuMat_upload_0(void* self, void* arr);
extern "C" __declspec(dllexport) void cuda_GpuMat_upload_1(void* self, void* arr, void* stream);
extern "C" __declspec(dllexport) void cuda_GpuMat_download_0(void* self, void* dst);
extern "C" __declspec(dllexport) void cuda_GpuMat_download_1(void* self, void* dst, void* stream);
extern "C" __declspec(dllexport) void* cuda_GpuMat_clone_0(void* self);
extern "C" __declspec(dllexport) void cuda_GpuMat_copyTo_0(void* self, void* dst);
extern "C" __declspec(dllexport) void cuda_GpuMat_copyTo_1(void* self, void* dst, void* stream);
extern "C" __declspec(dllexport) void cuda_GpuMat_copyTo_2(void* self, void* dst, void* mask);
extern "C" __declspec(dllexport) void cuda_GpuMat_copyTo_3(void* self, void* dst, void* mask, void* stream);
extern "C" __declspec(dllexport) void* cuda_GpuMat_setTo_0(void* self, cv::Scalar s);
extern "C" __declspec(dllexport) void* cuda_GpuMat_setTo_1(void* self, cv::Scalar s, void* stream);
extern "C" __declspec(dllexport) void* cuda_GpuMat_setTo_2(void* self, cv::Scalar s, void* mask);
extern "C" __declspec(dllexport) void* cuda_GpuMat_setTo_3(void* self, cv::Scalar s, void* mask, void* stream);
extern "C" __declspec(dllexport) void cuda_GpuMat_convertTo_0(void* self, void* dst, int rtype);
extern "C" __declspec(dllexport) void cuda_GpuMat_convertTo_1(void* self, void* dst, int rtype, void* stream);
extern "C" __declspec(dllexport) void cuda_GpuMat_convertTo_2(void* self, void* dst, int rtype, double alpha, double beta);
extern "C" __declspec(dllexport) void cuda_GpuMat_convertTo_3(void* self, void* dst, int rtype, double alpha, double beta, void* stream);
extern "C" __declspec(dllexport) void cuda_GpuMat_assignTo_0(void* self, void* m, int type);
extern "C" __declspec(dllexport) void* cuda_GpuMat_row_0(void* self, int y);
extern "C" __declspec(dllexport) void* cuda_GpuMat_col_0(void* self, int x);
extern "C" __declspec(dllexport) void* cuda_GpuMat_rowRange_0(void* self, int startrow, int endrow);
extern "C" __declspec(dllexport) void* cuda_GpuMat_rowRange_1(void* self, cv::Range r);
extern "C" __declspec(dllexport) void* cuda_GpuMat_colRange_0(void* self, int startcol, int endcol);
extern "C" __declspec(dllexport) void* cuda_GpuMat_colRange_1(void* self, cv::Range r);
extern "C" __declspec(dllexport) void* cuda_GpuMat_reshape_0(void* self, int cn, int rows);
extern "C" __declspec(dllexport) void cuda_GpuMat_locateROI_0(void* self, cv::Size wholeSize, cv::Point ofs);
extern "C" __declspec(dllexport) void* cuda_GpuMat_adjustROI_0(void* self, int dtop, int dbottom, int dleft, int dright);
extern "C" __declspec(dllexport) bool cuda_GpuMat_isContinuous_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_GpuMat_elemSize_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_GpuMat_elemSize1_0(void* self);
extern "C" __declspec(dllexport) int cuda_GpuMat_type_0(void* self);
extern "C" __declspec(dllexport) int cuda_GpuMat_depth_0(void* self);
extern "C" __declspec(dllexport) int cuda_GpuMat_channels_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_GpuMat_step1_0(void* self);
extern "C" __declspec(dllexport) cv::Size cuda_GpuMat_size_0(void* self);