src/OpenCV5Sharp/Generated/NativeMethods.Core.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_memoryBusWidth_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_l2CacheSize_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_maxThreadsPerMultiProcessor_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_DeviceInfo_queryMemory_0(CudaDeviceInfoHandle self, long totalMemory, long freeMemory);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_freeMemory_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_totalMemory_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_DeviceInfo_isCompatible_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_Event_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_Event_record_0(CudaEventHandle self, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_Event_queryIfComplete_0(CudaEventHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_Event_waitForCompletion_0(CudaEventHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float cuda_Event_elapsedTime_0(IntPtr start, IntPtr end);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuData_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_defaultAllocator_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_setDefaultAllocator_0(IntPtr allocator);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_getStdAllocator_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_New_0(int rows, int cols, int type, IntPtr allocator);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_New_1(Size size, int type, IntPtr allocator);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_New_2(int rows, int cols, int type, Scalar s, IntPtr allocator);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_New_3(Size size, int type, Scalar s, IntPtr allocator);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_New_4(IntPtr m);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_New_5(IntPtr m, Range rowRange, Range colRange);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_New_6(IntPtr m, Rect roi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_New_7(MatHandle arr, IntPtr allocator);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_create_0(CudaGpuMatHandle self, int rows, int cols, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_create_1(CudaGpuMatHandle self, Size size, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_release_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_swap_0(CudaGpuMatHandle self, IntPtr mat);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_upload_0(CudaGpuMatHandle self, MatHandle arr);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_upload_1(CudaGpuMatHandle self, MatHandle arr, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_download_0(CudaGpuMatHandle self, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_download_1(CudaGpuMatHandle self, MatHandle dst, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_clone_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_copyTo_0(CudaGpuMatHandle self, IntPtr dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_copyTo_1(CudaGpuMatHandle self, IntPtr dst, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_copyTo_2(CudaGpuMatHandle self, IntPtr dst, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_copyTo_3(CudaGpuMatHandle self, IntPtr dst, IntPtr mask, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_setTo_0(CudaGpuMatHandle self, Scalar s);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_setTo_1(CudaGpuMatHandle self, Scalar s, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_setTo_2(CudaGpuMatHandle self, Scalar s, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_setTo_3(CudaGpuMatHandle self, Scalar s, MatHandle mask, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_convertTo_0(CudaGpuMatHandle self, IntPtr dst, int rtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_convertTo_1(CudaGpuMatHandle self, IntPtr dst, int rtype, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_convertTo_2(CudaGpuMatHandle self, IntPtr dst, int rtype, double alpha, double beta);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_convertTo_3(CudaGpuMatHandle self, IntPtr dst, int rtype, double alpha, double beta, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_assignTo_0(CudaGpuMatHandle self, IntPtr m, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_row_0(CudaGpuMatHandle self, int y);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_col_0(CudaGpuMatHandle self, int x);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_rowRange_0(CudaGpuMatHandle self, int startrow, int endrow);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_rowRange_1(CudaGpuMatHandle self, Range r);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_colRange_0(CudaGpuMatHandle self, int startcol, int endcol);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_colRange_1(CudaGpuMatHandle self, Range r);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_reshape_0(CudaGpuMatHandle self, int cn, int rows);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_GpuMat_locateROI_0(CudaGpuMatHandle self, Size wholeSize, Point ofs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_GpuMat_adjustROI_0(CudaGpuMatHandle self, int dtop, int dbottom, int dleft, int dright);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_GpuMat_isContinuous_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_GpuMat_elemSize_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_GpuMat_elemSize1_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_GpuMat_type_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_GpuMat_depth_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_GpuMat_channels_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_GpuMat_step1_0(CudaGpuMatHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size cuda_GpuMat_size_0(CudaGpuMatHandle self);
